# book_creator

./: .gitignore  a.txt  pyproject.toml  readme.md
notebooks/: 1.docx  Chapter_1_Introduction.docx  book_create.ipynb  merged_output.docx  proper.ipynb
src/: app.py  base.py  main.py
src/main/: book_topics.py  content.py  prompt_template.py
src/utils/: file.py  parser.py
test/: llama_model.py
