[tool.poetry]
name = "book-creator"
version = "0.1.0"
description = ""
authors = ["SurajAiri <surajairi.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
langchain-openai = "^0.2.3"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
python-docx = "^1.1.2"
markdown = "^3.7"
pypandoc = "^1.14"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
